<resources>
    <string name="app_name">PurseClient</string>

    <!-- Strings related to login -->
    <string name="first_name">Имя</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="nick_name">Логин</string>
    <string name="last_name">Фамилия</string>
    <string name="phone">Телефон</string>
    <string name="date_birthday">День рождения</string>
    <string name="action_create_user">Создать пользователя</string>
    <string name="menu_registration">Регистрация</string>
    <string name="is_private_check_box">Приватный план</string>
    <string name="save_plan">Сохранить план</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_menu">Меню</string>
    <string name="save_flight">Сохранить примечание</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_create_plan">Создать план</string>
    <string name="name_plan">Название плана</string>
    <string name="owner_plan">Создатель плана</string>
    <string name="date_start_plan">Дата начала</string>
    <string name="date_end_plan">Дата конца</string>
    <string name="planned_budget">Планируемый бюджет</string>
    <string name="editor_plan_btn">Редактирование плана</string>
    <string name="delete_plan_btn">Удалить план</string>
    <string name="add_flight_plan_btn">Добавит примечание</string>
    <string name="planned_budget_flight">Планируемые затраты</string>
    <string name="comment">Примичание</string>
    <string name="add_user_family">Добавить пользователя</string>
    <string name="add_user_in_family">Добавить к семье</string>
    <string name="add_cash">Пополнить бюджет</string>
    <string name="save_cash">Добавить бюджета</string>
    <string name="tab_name">Настройка имён</string>
    <string name="tab_communication">Настройка связи</string>
    <string name="tab_password">Настройка пароля</string>
    <string name="tab_date_birth">Настройка дня рождения</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="editor_flight_btn">Редактирование примечания</string>
    <string name="delete_flight_btn">Удаление примечания</string>
    <string name="actualize_flight_btn">Утверждение примечания</string>
    <string name="actualize_plan_btn">Утвердить план</string>
    <string name="actual_budget">Актуальный бюджет</string>
    <string name="save">Сохранить</string>
    <string name="create_family">Создать семью</string>
    <string name="search_user">Имя пользователя</string>
    <string name="filter">Параметры фильтра</string>
    <string name="send_filter">Поиск</string>
    <string name="undelete_plan">Восстановить план</string>
    <string name="use_how_template">Использовать как шаблон</string>
    <string name="use_data_of_last_plan">Использовать данные из последнего плана</string>
    <string name="view_plans">Планы</string>
    <string name="view_template">Шаблоны планов</string>
    <string name="use_template_how_plan">Создать план</string>
    <string name="restore_password">Восстановить пароль</string>
</resources>
