<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.purse.purseclient.FlightEditorFragment">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name_plan_flight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="12sp"
                    android:textSize="18sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/owner_flight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="12sp"
                    android:textSize="18sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/planned_budget_flight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/planned_budget_flight"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/comment_flight"
                    android:layout_width="match_parent"
                    android:layout_height="109dp"
                    android:hint="@string/comment"
                    android:inputType="text"
                    android:maxLines="3" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/save_flight"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/save_flight"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>


</FrameLayout>
